--- a/.env
+++ b/.env
@@ -12,6 +12,8 @@
 #
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
+APP_ID=positibe_crm
+APP_HOST==${APP_ID}.localhost
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
@@ -29,5 +31,5 @@ APP_SECRET=8e3e58d5194652f959f87b1e738e1ba3
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres?serverVersion=11
 ###< doctrine/doctrine-bundle ###
